faclib/f2c.h

extern void f_cbeli(int,int,double,double *,double *,double *);
#define CBELI(a0,a1,a2,a3,a4,a5) f_cbeli((a0),(a1),(a2),(a3),(a4),(a5))
extern void f_rbeli(int,int,double,double *,double *);
#define RBELI(a0,a1,a2,a3,a4) f_rbeli((a0),(a1),(a2),(a3),(a4))
extern void f_cfit(int,int,double,double *);
#define CFIT(a0,a1,a2,a3) f_cfit((a0),(a1),(a2),(a3))
extern void f_colfit(int,int,int,double,double *,double *);
#define COLFIT(a0,a1,a2,a3,a4,a5) f_colfit((a0),(a1),(a2),(a3),(a4),(a5))
extern void f_ccolfit(int,int,int,double,double *,double *);
#define CCOLFIT(a0,a1,a2,a3,a4,a5) f_ccolfit((a0),(a1),(a2),(a3),(a4),(a5))
extern void f_ephfit2(int,int,int,double *);
#define EPHFIT2(a0,a1,a2,a3) f_ephfit2((a0),(a1),(a2),(a3))
extern void f_ecolfit(int,int,int,double *);
#define ECOLFIT(a0,a1,a2,a3) f_ecolfit((a0),(a1),(a2),(a3))
extern void f_ebeli(int,int,double *);
#define EBELI(a0,a1,a2) f_ebeli((a0),(a1),(a2))
extern double f_fu(double);
#define FU(a0) f_fu((a0))
extern void f_dxlegf(double,int,int,int,double,int,double *,int *,int *);
#define DXLEGF(a0,a1,a2,a3,a4,a5,a6,a7,a8) f_dxlegf((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8))
extern void f_njform(int,int,int *,int *,int *);
#define NJFORM(a0,a1,a2,a3,a4) f_njform((a0),(a1),(a2),(a3),(a4))
extern void f_njsum(int *,double *);
#define NJSUM(a0,a1) f_njsum((a0),(a1))
extern void f_cpydat(int,int *,int);
#define CPYDAT(a0,a1,a2) f_cpydat((a0),(a1),(a2))
extern void f_factt();
#define FACTT f_factt
extern void f_njdbug(int);
#define NJDBUG(a0) f_njdbug((a0))