faclib/f2c.f90


subroutine f_cbeli(a0,a1,a2,a3,a4,&
                   a5) bind(C, name='f_cbeli')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
real(c_double) :: a4(*)
real(c_double) :: a5(*)
call CBELI(a0,a1,a2,a3,a4,&
           a5)
end subroutine

subroutine f_rbeli(a0,a1,a2,a3,a4) bind(C, name='f_rbeli')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
real(c_double) :: a4(*)
call RBELI(a0,a1,a2,a3,a4)
end subroutine

subroutine f_cfit(a0,a1,a2,a3) bind(C, name='f_cfit')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: a3(*)
call CFIT(a0,a1,a2,a3)
end subroutine

subroutine f_colfit(a0,a1,a2,a3,a4,&
                    a5) bind(C, name='f_colfit')
integer(c_int), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
real(c_double), value :: a3
real(c_double) :: a4(*)
real(c_double) :: a5(*)
call COLFIT(a0,a1,a2,a3,a4,&
            a5)
end subroutine

subroutine f_ccolfit(a0,a1,a2,a3,a4,&
                     a5) bind(C, name='f_ccolfit')
integer(c_int), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
real(c_double), value :: a3
real(c_double) :: a4(*)
real(c_double) :: a5(*)
call CCOLFIT(a0,a1,a2,a3,a4,&
             a5)
end subroutine

subroutine f_ephfit2(a0,a1,a2,a3) bind(C, name='f_ephfit2')
integer(c_int), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
real(c_double) :: a3(*)
call EPHFIT2(a0,a1,a2,a3)
end subroutine

subroutine f_ecolfit(a0,a1,a2,a3) bind(C, name='f_ecolfit')
integer(c_int), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
real(c_double) :: a3(*)
call ECOLFIT(a0,a1,a2,a3)
end subroutine

subroutine f_ebeli(a0,a1,a2) bind(C, name='f_ebeli')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double) :: a2(*)
call EBELI(a0,a1,a2)
end subroutine

function f_fu(a0) bind(C, name='f_fu')
real(c_double), value :: a0
real(c_double) :: f_fu, FU
f_fu = FU(a0)
end function

subroutine f_dxlegf(a0,a1,a2,a3,a4,&
                    a5,a6,a7,a8) bind(C, name='f_dxlegf')
real(c_double), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
integer(c_int), value :: a3
real(c_double), value :: a4
integer(c_int), value :: a5
real(c_double) :: a6(*)
integer(c_int) :: a7(*)
integer(c_int) :: a8(*)
call DXLEGF(a0,a1,a2,a3,a4,&
            a5,a6,a7,a8)
end subroutine

subroutine f_njform(a0,a1,a2,a3,a4) bind(C, name='f_njform')
integer(c_int), value :: a0
integer(c_int), value :: a1
integer(c_int) :: a2(*)
integer(c_int) :: a3(*)
integer(c_int) :: a4(*)
call NJFORM(a0,a1,a2,a3,a4)
end subroutine

subroutine f_njsum(a0,a1) bind(C, name='f_njsum')
integer(c_int) :: a0(*)
real(c_double) :: a1(*)
call NJSUM(a0,a1)
end subroutine

subroutine f_cpydat(a0,a1,a2) bind(C, name='f_cpydat')
integer(c_int), value :: a0
integer(c_int) :: a1(*)
integer(c_int), value :: a2
call CPYDAT(a0,a1,a2)
end subroutine

subroutine f_factt() bind(C, name='f_factt')
call FACTT()
end subroutine

subroutine f_njdbug(a0) bind(C, name='f_njdbug')
integer(c_int), value :: a0
call NJDBUG(a0)
end subroutine

end module f2c
